Navegación addFragment agregada

--- a/app/src/main/res/navigation/nav_file.xml
+++ b/app/src/main/res/navigation/nav_file.xml
@@ -9,7 +9,11 @@
         android:id="@+id/recyclerViewFragment"
         android:name="com.utn.cookapp.fragments.RecyclerViewFragment"
         android:label="recycler_view_fragment"
-        tools:layout="@layout/recycler_view_fragment" />
+        tools:layout="@layout/recycler_view_fragment" >
+        <action
+            android:id="@+id/action_recyclerViewFragment_to_addFragment"
+            app:destination="@id/addFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.utn.cookapp.fragments.ProfileFragment"
