--- a/app/src/main/res/navigation/nav_file.xml
+++ b/app/src/main/res/navigation/nav_file.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_file"
-    app:startDestination="@id/recyclerViewFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/recyclerViewFragment"
@@ -58,4 +58,25 @@
         android:name="com.utn.cookapp.fragments.DetailRecipeFragment"
         android:label="detail_recipe_fragment"
         tools:layout="@layout/detail_recipe_fragment" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.utn.cookapp.fragments.LoginFragment"
+        android:label="login_fragment"
+        tools:layout="@layout/login_fragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_recyclerViewFragment"
+            app:destination="@id/recyclerViewFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_addUserFragment"
+            app:destination="@id/addUserFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addUserFragment"
+        android:name="com.utn.cookapp.fragments.AddUserFragment"
+        android:label="add_user_fragment"
+        tools:layout="@layout/add_user_fragment" >
+        <action
+            android:id="@+id/action_addUserFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
