--- a/app/src/main/res/layout/add_user_fragment.xml
+++ b/app/src/main/res/layout/add_user_fragment.xml
@@ -11,13 +11,13 @@
         android:id="@+id/passwordPlainText"
         android:layout_width="wrap_content"
         android:layout_height="48sp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="Pass"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <EditText
         android:id="@+id/agePlainText"
@@ -50,25 +50,54 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
-    <EditText
-        android:id="@+id/profileImagePlainText"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/selectImageBtn"
         android:layout_width="wrap_content"
-        android:layout_height="48sp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="ProfileImage"
-        android:inputType="textPersonName"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-40dp"
+        android:layout_marginBottom="-20dp"
+        android:clickable="true"
+        android:src="@drawable/edit_fill0_wght400_grad0_opsz48"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintStart_toEndOf="@+id/view2" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/view2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:elevation="12dp"
+        app:cardCornerRadius="75dp"
+        app:layout_constraintBottom_toTopOf="@+id/usernamePlainText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_foreground" />
+
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/doneButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="Done"
+        android:text="create user"
+        app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileImagePlainText" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
