--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,6 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="Preferences">
         <SwitchPreference
+            android:id="@+id/settingsTheme"
             android:key="theme"
             android:title="Dark theme"
             />
