--- a/app/src/main/res/layout/detail_recipe_fragment.xml
+++ b/app/src/main/res/layout/detail_recipe_fragment.xml
@@ -12,13 +12,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:text="Recipe"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
