--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -12,11 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#3F51B5"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:text="Settings"
         android:textAlignment="textEnd"
         android:textAllCaps="false"
         android:textSize="16sp"
+        app:icon="@drawable/ic_settings_fill0_wght400_grad0_opsz48"
         app:iconPadding="5dp"
         app:layout_constraintBottom_toTopOf="@+id/logOutBtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,10 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#AEE63B2F"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:text="Log out"
         android:textAllCaps="false"
         android:textSize="16dp"
+        app:icon="@drawable/ic_logout_fill0_wght400_grad0_opsz48"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
