--- a/app/src/main/res/layout/add_user_fragment.xml
+++ b/app/src/main/res/layout/add_user_fragment.xml
@@ -15,6 +15,7 @@
         android:ems="10"
         android:hint="Pass"
         android:inputType="textPersonName"
+        android:password="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -26,7 +27,8 @@
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:hint="Age"
-        android:inputType="textPersonName"
+        android:inputType="number|textPersonName"
+        android:phoneNumber="false"
         app:layout_constraintBottom_toTopOf="@+id/passwordPlainText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
